--- a/padbol-match-frontend/src/index.css
+++ b/padbol-match-frontend/src/index.css
@@ -1,5 +1,7 @@
 html {
-  overflow-x: hidden;
+  height: auto;
+  min-height: 100vh;
+  overflow: auto;
   width: 100%;
 }
 
@@ -28,7 +30,9 @@ html {
 
 body {
   margin: 0;
-  overflow-x: hidden;
+  height: auto;
+  min-height: 100vh;
+  overflow: auto;
   overscroll-behavior-y: contain;
   width: 100%;
   max-width: 100%;
